# bookish-eureka

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: cov.yml
src/: main.rs
src/server/: mod.rs  state.rs
src/server/controller/: bill.rs  bills.rs  error.rs  mod.rs  table.rs
src/server/database/: connection.rs  mod.rs  pool.rs  pool_config.rs
src/server/database/migrations/: V1__init.sql
src/server/env/: .env.dev  .env.stg
src/server/model/: bill.rs  config.rs  item.rs  mod.rs  order.rs  table.rs
src/server/routes/: orders.rs
src/server/scheduler/: job.rs
src/server/util/: time.rs
tests/: integration.rs
