[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Api Server
actix-web = { version = "4.9.0", features = ["default"] }
actix-web-validation = { version = "0.5.1", features = ["validator"] }

# Utilities
dotenvy = { version = "0.15.7"}
env_logger = "0.11.5"
log = "0.4.22"
futures-util = "0.3.31"
chrono = "0.4.38"

# Serde
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"

# Error Handling
anyhow = "1.0.93"

# Observability
tracing = "0.1.40"

# Persistent Layer
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1", "with-chrono-0_4"] }
refinery = { version = "0.8", features = ["tokio-postgres"]}

# Synchronization
tokio = { version = "1.41.1", features = ["rt-multi-thread", "sync", "macros"] }
time = "0.3.36"
http = "0.2.12"

# Other binary configuration

[[bin]]
name = "client"
path = "src/bin/client.rs"