[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Api Server
actix-web = { version = "4.9.0", features = ["default"] }

# Utilities
dotenvy = { version = "0.15.7"}
env_logger = "0.11.5"
log = "0.4.22"
chrono = "0.4.38"
derive_more = { version = "1.0.0", features = ["display", "error"] }
rand = "0.8.5"

# Async
futures-executor = "0.3.31"

# Serde
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"

# Error Handling
anyhow = "1.0.93"

# Persistent Layer
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1", "with-chrono-0_4"] }
# migration
refinery = { version = "0.8", features = ["tokio-postgres"]}

# Synchronization
tokio = { version = "1.41.1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tokio-util = { version = "0.7.12", features = ["rt"] }

## Build client cli
clap = { version = "4.5.21", features = ["derive"], optional = true }
reqwest = { version = "0.12.9", features = ["json"], optional = true }

[features]
build-client = ["clap", "reqwest", "serde_json/default", "rand/default", "tokio/time", "tokio/signal", "tokio/rt"]

# Other binary configuration

[[bin]]
name = "client"
path = "src/bin/client.rs"
required-features = ["build-client"]
